--- a/blog-homepage/src/App.css
+++ b/blog-homepage/src/App.css
@@ -1,3 +1,17 @@
+.your-articles-container{
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 1rem;
+  grid-row-gap:1rem;
+}
+.missed-articles-container{
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1rem;
+}
+
 a {
   text-decoration: none;
   color:inherit;
@@ -6,39 +20,58 @@ a {
   text-align: left;
   margin: 1rem
 }
-.your-articles-container{
-  display: grid
-}
+
 .article-card-your{
-  display:flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap:1rem;
 }
 
 .article-card-missed{
   display:flex;
+  flex-direction: column;
+  height: auto;
   gap:1rem;
+} 
+.article-card-container{
+  border: 1px solid rgba(128, 128, 128, 0.292);  
 }
-
-.article-text{
-
+.line{  
+  border-bottom: 1px solid rgb(202, 202, 202);
+  margin-top: 5px;
+  margin: 1rem
 }
 .article-image{
-  max-width: 15rem;
-  height: 100%;
+  width: 100%; 
+  object-fit:contain;
 }
 .article-body{
   text-align: left;
 }
+.article-text{
+  padding: 0.5rem 0rem 0.5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.info-container{
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+}
 .article-details{
   display: flex;
   gap: 1rem;
-  align-items: center
+  align-items: center;
 }
 .article-body > p{
   color:#7c7c7c;
-  font-size: 12px
+  font-size: 14px
 }
 
+.article-bookmark{
+  height: 1rem
+}
 
 .author-image{
   width: 50px;
@@ -60,43 +93,3 @@ a {
   color:#7c7c7c
 }
 
-
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
